Fixed text getting cut off on some tiles on some devices by making the grid have three columns instead of four and rearanging/resizing the tiles so they would fit the text and still look good.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 body {
     width: calc(100% - 2em);
-    padding-inline: 1em;
+    padding: 1em;
     margin: 0;
 }
